<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:paddingBottom="80dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/app_text" />

        <TextView
            android:id="@+id/title_label"
            style="@style/label"
            android:layout_marginTop="20dp"
            android:text="@string/onboarding_additional_title"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- <TextView
            android:id="@+id/subtitle_label"
            style="@style/label"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:alpha="0.7"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:text="@string/onboarding_additional_subtitle"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_label" /> -->


        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_label">

            <TextView
                android:id="@+id/surname_title_label"
                style="@style/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                
                android:text="@string/onboarding_surname_title"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/student_surname_input"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:ems="8"
                android:hint="@string/onboarding_surname_hint"
                android:inputType="textCapWords"
                android:paddingHorizontal="8dp"
                android:textAlignment="textStart" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/english_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/onboarding_english_switch"
                android:textColor="?attr/app_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/english_input"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:ems="8"
                android:hint="@string/onboarding_english_hint"
                android:inputType="number"
                android:paddingHorizontal="8dp"
                android:textAlignment="textStart"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/seminar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/seminar_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/onboarding_seminar_switch"
                    android:textColor="?attr/app_text"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/seminar_input"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    android:ems="8"
                    android:hint="@string/onboarding_seminar_hint"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="8dp"
                    android:textAlignment="textStart"
                    android:visibility="gone" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_button"
                style="@style/button"
                android:layout_width="183dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:text="@string/onboarding_button_finish" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
